--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,12 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "5050:80"
+
+  # app:
+  #   container_name: fastapi_grocery_tracker
+  #   build: .
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - .:/app
+  #   command: ["pdm", "run", "python", "main.py"]
